tests/fixtures/invalid/list_rshift_bool.py
# Cannot right shift List[int] and Bool
x: list[int] = [1, 2, 3] >> True
